half way through

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,4 +1,69 @@
 {
+  "regions": "=======================================",
+  "Baghdad": "بغداد",
+  "Al Anbar": "الانبار",
+  "Babil": "بابل",
+  "Basra": "البصرة",
+  "Dhi Qar": "ذي قار",
+  "Al Qadisiyyah": "القادسية",
+  "Diyala": "ديالى",
+  "Duhok": "دهوك",
+  "Erbil": "اربيل",
+  "Karbala": "كربلاء",
+  "Kirkuk": "كركوك",
+  "Maysan": "ميسان",
+  "Muthanna": "المثنى",
+  "Najaf": "النجف",
+  "Nineveh": "نينوى",
+  "Saladin": "صلاح الدين",
+  "Sulaymaniyah": "السليمانية",
+  "Wasit": "واسط",
+  "specialities": "=======================================",
+  "Cardiologist": "قلبيه",
+  "Pulmonologist": "تنفسيه",
+  "Endocrinologist": "غدد صماء",
+  "Enterologist": "طب الجهاز الهضمي",
+  "General Surgeon": "جراحه عامه",
+  "Pediatric Surgeon": "جراحه اطفال",
+  "ThoracoVascular Surgeon": "جراحه صدر واوعيه دمويه",
+  "Emergency physician": "طب الطوارئ",
+  "Internist": "باطنيه عام",
+  "Pediatrician": "اطفال",
+  "Gynecologist": "نسائيه وتوليد",
+  "Rheumatologist": "مفاصل",
+  "Nephrologist": "امراض الكلى",
+  "Heamatologist": "امراض دم",
+  "Neurologist": "عصبيه",
+  "Urosurgeon": "جراحه مجاري بوليه",
+  "Orthopaedic Surgeon": "جراحه كسور",
+  "Neurosurgeon": "جراحه اعصاب",
+  "Plastic Surgeon": "جراحه تجميليه",
+  "Dermatologist": "جلديه",
+  "Ophthalmologist": "عيون",
+  "Psychiatrist": "نفسيه",
+  "Laryngologist": "انف اذن وحنجرة",
+  "weekdays": "=======================================",
+  "sun": "ح",
+  "mon": "ن",
+  "tue": "ث",
+  "wed": "ر",
+  "thu": "خ",
+  "fri": "ج",
+  "sat": "س",
+  "sunday": "الاحد",
+  "monday": "الاثنين",
+  "tuesday": "الثلاثاء",
+  "wednesday": "الاربعاء",
+  "thursday": "الخميس",
+  "friday": "الجمعه",
+  "saturday": "السبت",
+  "from": "من ",
+  "to": "الى ",
+  "AM": "صباحا",
+  "PM": "مساءا",
+
+
+  
   "body_regions": {
     "heart_lung": "القلب والرئتين",
     "git": "الجهاز الهضمي",
@@ -555,7 +620,26 @@
     "AM": "صباحا",
     "PM": "مساءا"
   },
-  "view_snack_error": {
+  "view_new_search": {
+    "governorate": "المحافظة",
+    "enter_name_speciality": "ادخل اسم الطبيب او الاختصاص الطبي لطفا",
+    "name_search": "البحث حسب الاسم",
+    "name_validator": "ادخل اسم الطبيب لطفا",
+    "select_province": "حدد المحافظة لطفا",
+    "speciality_search": "البحث حسب الاختصاص",
+    "speciality_validator": "ادخل الاختصاص الطبي لطفا",
+    "enter_name": "ادخل اسم الطبيب",
+    "new_search": "بحث جديد",
+    "enter_speciality": "ادخل الاختصاص الطبي"
+  },
+  "popupMenu": {
+    "language": "تغيير اللغة",
+    "theme": "غير الخلفية",
+    "logout": "تسجيل خروج",
+    "deleteAccount": "حذف الحساب",
+    "UpdateProfile": "تحديث الحساب"
+  },
+  "error": {
     "snack_sign_in": "خطا في الدخول",
     "snack_connectivity": "لا يوجد اتصال بالشبكه",
     "snack_register": "خطا في التسجيل اضف معلومات صحيحه اولا",
@@ -581,17 +665,5 @@
     "choose_1st_exception_day": "حدد اليوم المستثنى الاول",
     "error_title": "خطأ !",
     "sign_info": "املأ الحقول المطلوبة"
-  },
-  "view_new_search": {
-    "governorate": "المحافظة",
-    "enter_name_speciality": "ادخل اسم الطبيب او الاختصاص الطبي لطفا",
-    "name_search": "البحث حسب الاسم",
-    "name_validator": "ادخل اسم الطبيب لطفا",
-    "select_province": "حدد المحافظة لطفا",
-    "speciality_search": "البحث حسب الاختصاص",
-    "speciality_validator": "ادخل الاختصاص الطبي لطفا",
-    "enter_name": "ادخل اسم الطبيب",
-    "new_search": "بحث جديد",
-    "enter_speciality": "ادخل الاختصاص الطبي"
   }
 }
