--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,4 +1,66 @@
 {
+  "iraq_governate": "=======================================",
+  "Baghdad": "Baghdad",
+  "Al Anbar": "Al Anbar",
+  "Babil": "Babil",
+  "Basra": "Basra",
+  "Dhi Qar": "Dhi Qar",
+  "Al Qadisiyyah": "Al Qadisiyyah",
+  "Diyala": "Diyala",
+  "Duhok": "Duhok",
+  "Erbil": "Erbil",
+  "Karbala": "Karbala",
+  "Kirkuk": "Kirkuk",
+  "Maysan": "Maysan",
+  "Muthanna": "Muthanna",
+  "Najaf": "Najaf",
+  "Nineveh": "Nineveh",
+  "Saladin": "Saladin",
+  "Sulaymaniyah": "Sulaymaniyah",
+  "Wasit": "Wasit",
+  "specialities": "=======================================",
+  "Cardiologist": "Cardiologist",
+  "Pulmonologist": "Pulmonologist",
+  "Endocrinologist": "Endocrinologist",
+  "Enterologist": "Enterologist",
+  "General Surgeon": "General Surgeon",
+  "Pediatric Surgeon": "Pediatric Surgeon",
+  "ThoracoVascular Surgeon": "ThoracoVascular Surgeon",
+  "Emergency physician": "Emergency Department",
+  "Internist": "Internist",
+  "Pediatrician": "Pediatrician",
+  "Gynecologist": "Gynecologist",
+  "Rheumatologist": "Rheumatologist",
+  "Nephrologist": "Nephrologist",
+  "Heamatologist": "Heamatologist",
+  "Neurologist": "Neurologist",
+  "Urosurgeon": "Urosurgeon",
+  "Orthopaedic Surgeon": "Orthopaedic Surgeon",
+  "Neurosurgeon": "Neurosurgeon",
+  "Plastic Surgeon": "Plastic Surgeon",
+  "Dermatologist": "Dermatologist",
+  "Ophthalmologist": "Ophthalmologist",
+  "Psychiatrist": "Psychiatrist",
+  "Laryngologist": "Laryngologist",
+  "weekdays": "=======================================",
+  "sun": "S",
+  "mon": "M",
+  "tue": "T",
+  "wed": "W",
+  "thu": "T",
+  "fri": "F",
+  "sat": "S",
+  "sunday": "Sunday",
+  "monday": "Monday",
+  "tuesday": "Tuesday",
+  "wednesday": "Wednesday",
+  "thursday": "Thursday",
+  "friday": "Friday",
+  "saturday": "Saturday",
+  "from": "From ",
+  "to": "To ",
+  "AM": "AM",
+  "PM": "PM",
   "body_regions": {
     "heart_lung": "Heart & Lungs",
     "git": "Gastro Intestinal Tract",
@@ -555,7 +617,26 @@
     "AM": "AM",
     "PM": "PM"
   },
-  "view_snack_error": {
+  "view_new_search": {
+    "governorate": "Province",
+    "enter_name_speciality": "Please , enter doctor's name or a medical specialization",
+    "name_search": "Search by name",
+    "name_validator": "Please , enter doctor's name",
+    "select_province": "Please , select a province",
+    "speciality_search": "Search by speciality",
+    "speciality_validator": "Please , enter doctor's speciality",
+    "enter_name": "Enter doctor's name",
+    "new_search": "New Search",
+    "enter_speciality": "Enter doctor's speciality"
+  },
+  "popupMenu": {
+    "language": "Change Language",
+    "theme": "Change Theme",
+    "logout": "Log out",
+    "deleteAccount": "Delete Acccount",
+    "UpdateProfile": "Update Account"
+  },
+  "error": {
     "snack_sign_in": "Please, Enter valid email & passwords",
     "snack_connectivity": "No Internet Connection",
     "snack_register": "Registeration Error, Please enter valid credentials",
@@ -581,17 +662,5 @@
     "choose_1st_exception_day": "Please , choose the first exception day",
     "error_title": "Hey !",
     "sign_info": "Fill in the required fields"
-  },
-  "view_new_search": {
-    "governorate": "Province",
-    "enter_name_speciality": "Please , enter doctor's name or a medical specialization",
-    "name_search": "Search by name",
-    "name_validator": "Please , enter doctor's name",
-    "select_province": "Please , select a province",
-    "speciality_search": "Search by speciality",
-    "speciality_validator": "Please , enter doctor's speciality",
-    "enter_name": "Enter doctor's name",
-    "new_search": "New Search",
-    "enter_speciality": "Enter doctor's speciality"
   }
 }
