--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -633,7 +633,7 @@
     "language": "Change Language",
     "theme": "Change Theme",
     "logout": "Log out",
-    "deleteAccount": "Delete Acccount",
+    "deleteAccount": "Delete Account",
     "UpdateProfile": "Update Account"
   },
   "error": {
