--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -18,7 +18,7 @@
   "Saladin": "صلاح الدين",
   "Sulaymaniyah": "السليمانية",
   "Wasit": "واسط",
-  "specialities": "=======================================",
+  "specialities": "===========================================",
   "Cardiologist": "قلبيه",
   "Pulmonologist": "تنفسيه",
   "Endocrinologist": "غدد صماء",
@@ -61,9 +61,6 @@
   "to": "الى ",
   "AM": "صباحا",
   "PM": "مساءا",
-
-
-  
   "body_regions": {
     "heart_lung": "القلب والرئتين",
     "git": "الجهاز الهضمي",
@@ -665,5 +662,11 @@
     "choose_1st_exception_day": "حدد اليوم المستثنى الاول",
     "error_title": "خطأ !",
     "sign_info": "املأ الحقول المطلوبة"
+  },
+  "iraq_governate": "=======================================",
+  "search": {
+    "name_speciality": "البحث بالاسم / التخصص",
+    "complain": "البحث عن طريق  الاعراض",
+    "history": "سجل البحث"
   }
 }
