--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,4 +1,5 @@
 {
+  "Or": " أو ",
   "regions": "=======================================",
   "Baghdad": "بغداد",
   "Al Anbar": "الانبار",
@@ -157,7 +158,7 @@
     "add_complains": "الاعراض الاخرى",
     "result_speciality": "الاعراض التي تعاني منها تتفق مع الاختصاص الطبي",
     "get_location": "للاستمرار يجب تحديد موقعك من خلال احدى الخيارين",
-    "auto_location": "تحديد موقع الجهاز الحالي",
+    "auto_location": "موقع الجهاز الحالي",
     "speciality_result": "الاختصاص الطبي",
     "your_location": "حدد موقعك",
     "region": "موقعك الجغرافي في العراق",
