--- a/lang/en.json
+++ b/lang/en.json
@@ -206,8 +206,8 @@
     "first_choose_complain": "First choose your Complaint ",
     "add_complains": "Additional Complaints",
     "result_speciality": "Your complaints are associated with the Following Speciality:",
-    "get_location": "To Continue, You Must Specify your current location through either:",
-    "auto_location": "Auto Device Location",
+    "get_location": "To Continue, You Must Specify your location through either:",
+    "auto_location": "Current Location",
     "speciality_result": "Medical Speciality",
     "your_location": "Your Location",
     "region": "Location",
