--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -219,7 +219,8 @@
     "data_error": "An error had occurred , please update your information and sign in again",
     "prof_error": "Error !!",
     "last_searched_doctor": "Last Searched Doctor",
-    "log_out": "Log out"
+    "log_out": "Log out",
+    "home_screen" : "Home Screen"
   },
   "view_last_search": {
     "back": "Back",
